[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asaas_client"
description = "An unofficial client for Asaas API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Miguel Figueira Ferraz", email = "miguelfigueiraferraz@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx>=0.25.0"]
dynamic = ["version"]


[project.urls]
Documentation = "https://github.com/miguelfferraz/python-asaas-client/tree/main#readme"
Source = "https://github.com/miguelfferraz/python-asaas-client"
Tracker = "https://github.com/miguelfferraz/python-asaas-client/issues"

[tool.hatch.version]
path = "asaas_client/__init__.py"
